--- a/connect4.css
+++ b/connect4.css
@@ -1,5 +1,8 @@
 /* game board table */
-
+:root {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  /* font-size: 20px; */
+}
 #board td {
   width: 50px;
   height: 50px;
@@ -15,13 +18,13 @@
   border-radius: 50%;
 }
 
-.piece.p1 {
+/* .piece.p1 {
   background-color: red;
 }
 
 .piece.p2 {
   background-color: blue;
-}
+} */
 
 /* column-top is table row of clickable areas for each column */
 
